LLVMInterface/LLVMInterface/ManagedContext.h

struct ManagedContext
{
    llvm::Module* M;
    llvm::LLVMContext* context;
    llvm::Type* stringTy = 0;
    llvm::IRBuilder<>* builder = 0;
    AllocationRemovingPass* arp = 0;

    ManagedContext(const char* name, const char* filename );
    ~ManagedContext();

};
EXTERN_API(void) addReturnDereferenceableAttribute(ManagedContext *ctx, llvm::Function *fn, uint64_t numBytesOrDeduce);
EXTERN_API(bool) addParamDereferenceableAttribute(ManagedContext *ctx, llvm::Function *fn, uint32_t paramIdx, uint64_t numBytesOrDeduce);
EXTERN_API(void) addReturnDereferenceableOrNullAttribute(ManagedContext *ctx, llvm::Function *fn, uint64_t numBytesOrDeduce);
EXTERN_API(bool) addParamDereferenceableOrNullAttribute(ManagedContext *ctx, llvm::Function *fn, uint32_t paramIdx, uint64_t numBytesOrDeduce);
EXTERN_API(llvm::Function)* declareMallocFunction(ManagedContext* ctx, const char* name, llvm::Type* const* argTys, uint32_t argc, bool resultNotNull);
EXTERN_API(llvm::Type)* getFunctionPtrTypeFromFunction(ManagedContext* ctx, llvm::Function* fn);
EXTERN_API(llvm::Type)* getFunctionPtrType(ManagedContext* ctx, llvm::Type* retTy, llvm::Type** argTys, uint32_t argc);
EXTERN_API(void) resetInsertPoint(ManagedContext* ctx, llvm::BasicBlock* bb, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* defineAlloca(ManagedContext* ctx, llvm::Function* fn, llvm::Type* ty, const char* name);
EXTERN_API(llvm::Value)* defineZeroinitializedAlloca(ManagedContext* ctx, llvm::Function* fn, llvm::Type* ty, const char* name, llvm::IRBuilder<>* irb, bool addlifetime);
EXTERN_API(llvm::Value)* defineInitializedAlloca(ManagedContext* ctx, llvm::Function* fn, llvm::Type* ty, llvm::Value* initVal, const char* name, llvm::IRBuilder<>* irb, bool addlifetime);
EXTERN_API(llvm::Value)* defineTypeInferredInitializedAlloca(ManagedContext* ctx, llvm::Function* fn, llvm::Value* initVal, const char* name, llvm::IRBuilder<>* irb, bool addlifetime);
EXTERN_API(void) endLifeTime(ManagedContext* ctx, llvm::Value* ptr, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* loadField(ManagedContext* ctx, llvm::Value* basePtr, llvm::Value** gepIdx, uint32_t gepIdxCount, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* loadFieldConstIdx(ManagedContext* ctx, llvm::Value* basePtr, uint32_t* gepIdx, uint32_t geIdxCount, llvm::IRBuilder<>* irb);
EXTERN_API(void) storeField(ManagedContext* ctx, llvm::Value* basePtr, llvm::Value** gepIdx, uint32_t gepIdxCount, llvm::Value* nwVal, llvm::IRBuilder<>* irb);
EXTERN_API(void) storeFieldConstIdx(ManagedContext* ctx, llvm::Value* basePtr, uint32_t* gepIdx, uint32_t gepIdxCount, llvm::Value* nwVal, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* GetElementPtr(ManagedContext* ctx, llvm::Value* basePtr, llvm::Value** gepIdx, uint32_t gepIdxCount, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* GetElementPtrConstIdx(ManagedContext* ctx, llvm::Value* basePtr, uint32_t* gepIdx, uint32_t gepIdxCount, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* GetElementPtrConstIdxWithType(ManagedContext* ctx, llvm::Type* pointeeTy, llvm::Value* basePtr, uint32_t* gepIdx, uint32_t gepIdxCount, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* load(ManagedContext* ctx, llvm::Value* basePtr, llvm::IRBuilder<>* irb);
EXTERN_API(llvm::Value)* loadAcquire(ManagedContext* ctx, llvm::Value* basePtr, llvm::IRBuilder<>* irb);
EXTERN_API(void) store(ManagedContext* ctx, llvm::Value* basePtr, llvm::Value* nwVal, llvm::IRBuilder<>* irb);
EXTERN_API(void) storeRelease(ManagedContext* ctx, llvm::Value* basePtr, llvm::Value* nwVal, llvm::IRBuilder<>* irb);