LLVMCodeGenerator/LLVMCodeGenerator/ManagedContext.cs

        public static void AddReturnDereferenceableAttribute (IntPtr ctx, IntPtr fn, ulong numBytesOrDeduce) {
            addReturnDereferenceableAttribute(ctx, fn, numBytesOrDeduce);
        }
        public void AddReturnDereferenceableAttribute (IntPtr fn, ulong numBytesOrDeduce) {
            addReturnDereferenceableAttribute(Instance, fn, numBytesOrDeduce);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern bool addParamDereferenceableAttribute (IntPtr ctx, IntPtr fn, uint paramIdx, ulong numBytesOrDeduce);
        public static bool AddParamDereferenceableAttribute (IntPtr ctx, IntPtr fn, uint paramIdx, ulong numBytesOrDeduce) {
            return addParamDereferenceableAttribute(ctx, fn, paramIdx, numBytesOrDeduce);
        }
        public bool AddParamDereferenceableAttribute (IntPtr fn, uint paramIdx, ulong numBytesOrDeduce) {
            return addParamDereferenceableAttribute(Instance, fn, paramIdx, numBytesOrDeduce);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void addReturnDereferenceableOrNullAttribute (IntPtr ctx, IntPtr fn, ulong numBytesOrDeduce);
        public static void AddReturnDereferenceableOrNullAttribute (IntPtr ctx, IntPtr fn, ulong numBytesOrDeduce) {
            addReturnDereferenceableOrNullAttribute(ctx, fn, numBytesOrDeduce);
        }
        public void AddReturnDereferenceableOrNullAttribute (IntPtr fn, ulong numBytesOrDeduce) {
            addReturnDereferenceableOrNullAttribute(Instance, fn, numBytesOrDeduce);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern bool addParamDereferenceableOrNullAttribute (IntPtr ctx, IntPtr fn, uint paramIdx, ulong numBytesOrDeduce);
        public static bool AddParamDereferenceableOrNullAttribute (IntPtr ctx, IntPtr fn, uint paramIdx, ulong numBytesOrDeduce) {
            return addParamDereferenceableOrNullAttribute(ctx, fn, paramIdx, numBytesOrDeduce);
        }
        public bool AddParamDereferenceableOrNullAttribute (IntPtr fn, uint paramIdx, ulong numBytesOrDeduce) {
            return addParamDereferenceableOrNullAttribute(Instance, fn, paramIdx, numBytesOrDeduce);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr declareMallocFunction (IntPtr ctx, [MarshalAs(UnmanagedType.LPUTF8Str)]string name, IntPtr[] argTys, uint argc, bool resultNotNull);
        public static IntPtr DeclareMallocFunction (IntPtr ctx, string name, IntPtr[] argTys, bool resultNotNull) {
            return declareMallocFunction(ctx, name, argTys, (uint)argTys.Length, resultNotNull);
        }
        public IntPtr DeclareMallocFunction (string name, IntPtr[] argTys, bool resultNotNull) {
            return declareMallocFunction(Instance, name, argTys, (uint)argTys.Length, resultNotNull);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getFunctionPtrTypeFromFunction (IntPtr ctx, IntPtr fn);
        public static IntPtr GetFunctionPtrTypeFromFunction (IntPtr ctx, IntPtr fn) {
            return getFunctionPtrTypeFromFunction(ctx, fn);
        }
        public IntPtr GetFunctionPtrTypeFromFunction (IntPtr fn) {
            return getFunctionPtrTypeFromFunction(Instance, fn);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr getFunctionPtrType (IntPtr ctx, IntPtr retTy, IntPtr[] argTys, uint argc);
        public static IntPtr GetFunctionPtrType (IntPtr ctx, IntPtr retTy, IntPtr[] argTys) {
            return getFunctionPtrType(ctx, retTy, argTys, (uint)argTys.Length);
        }
        public IntPtr GetFunctionPtrType (IntPtr retTy, IntPtr[] argTys) {
            return getFunctionPtrType(Instance, retTy, argTys, (uint)argTys.Length);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void resetInsertPoint (IntPtr ctx, IntPtr bb, IntPtr irb);
        public static void ResetInsertPoint (IntPtr ctx, IntPtr bb, IntPtr irb) {
            resetInsertPoint(ctx, bb, irb);
        }
        public void ResetInsertPoint (IntPtr bb, IntPtr irb) {
            resetInsertPoint(Instance, bb, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr defineAlloca (IntPtr ctx, IntPtr fn, IntPtr ty, [MarshalAs(UnmanagedType.LPUTF8Str)]string name);
        public static IntPtr DefineAlloca (IntPtr ctx, IntPtr fn, IntPtr ty, string name) {
            return defineAlloca(ctx, fn, ty, name);
        }
        public IntPtr DefineAlloca (IntPtr fn, IntPtr ty, string name) {
            return defineAlloca(Instance, fn, ty, name);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr defineZeroinitializedAlloca (IntPtr ctx, IntPtr fn, IntPtr ty, [MarshalAs(UnmanagedType.LPUTF8Str)]string name, IntPtr irb, bool addlifetime);
        public static IntPtr DefineZeroinitializedAlloca (IntPtr ctx, IntPtr fn, IntPtr ty, string name, IntPtr irb, bool addlifetime) {
            return defineZeroinitializedAlloca(ctx, fn, ty, name, irb, addlifetime);
        }
        public IntPtr DefineZeroinitializedAlloca (IntPtr fn, IntPtr ty, string name, IntPtr irb, bool addlifetime) {
            return defineZeroinitializedAlloca(Instance, fn, ty, name, irb, addlifetime);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr defineInitializedAlloca (IntPtr ctx, IntPtr fn, IntPtr ty, IntPtr initVal, [MarshalAs(UnmanagedType.LPUTF8Str)]string name, IntPtr irb, bool addlifetime);
        public static IntPtr DefineInitializedAlloca (IntPtr ctx, IntPtr fn, IntPtr ty, IntPtr initVal, string name, IntPtr irb, bool addlifetime) {
            return defineInitializedAlloca(ctx, fn, ty, initVal, name, irb, addlifetime);
        }
        public IntPtr DefineInitializedAlloca (IntPtr fn, IntPtr ty, IntPtr initVal, string name, IntPtr irb, bool addlifetime) {
            return defineInitializedAlloca(Instance, fn, ty, initVal, name, irb, addlifetime);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr defineTypeInferredInitializedAlloca (IntPtr ctx, IntPtr fn, IntPtr initVal, [MarshalAs(UnmanagedType.LPUTF8Str)]string name, IntPtr irb, bool addlifetime);
        public static IntPtr DefineTypeInferredInitializedAlloca (IntPtr ctx, IntPtr fn, IntPtr initVal, string name, IntPtr irb, bool addlifetime) {
            return defineTypeInferredInitializedAlloca(ctx, fn, initVal, name, irb, addlifetime);
        }
        public IntPtr DefineTypeInferredInitializedAlloca (IntPtr fn, IntPtr initVal, string name, IntPtr irb, bool addlifetime) {
            return defineTypeInferredInitializedAlloca(Instance, fn, initVal, name, irb, addlifetime);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void endLifeTime (IntPtr ctx, IntPtr ptr, IntPtr irb);
        public static void EndLifeTime (IntPtr ctx, IntPtr ptr, IntPtr irb) {
            endLifeTime(ctx, ptr, irb);
        }
        public void EndLifeTime (IntPtr ptr, IntPtr irb) {
            endLifeTime(Instance, ptr, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr loadField (IntPtr ctx, IntPtr basePtr, IntPtr[] gepIdx, uint gepIdxCount, IntPtr irb);
        public static IntPtr LoadField (IntPtr ctx, IntPtr basePtr, IntPtr[] gepIdx, IntPtr irb) {
            return loadField(ctx, basePtr, gepIdx, (uint)gepIdx.Length, irb);
        }
        public IntPtr LoadField (IntPtr basePtr, IntPtr[] gepIdx, IntPtr irb) {
            return loadField(Instance, basePtr, gepIdx, (uint)gepIdx.Length, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr loadFieldConstIdx (IntPtr ctx, IntPtr basePtr, uint[] gepIdx, uint geIdxCount, IntPtr irb);
        public static IntPtr LoadFieldConstIdx (IntPtr ctx, IntPtr basePtr, uint[] gepIdx, IntPtr irb) {
            return loadFieldConstIdx(ctx, basePtr, gepIdx, (uint)gepIdx.Length, irb);
        }
        public IntPtr LoadFieldConstIdx (IntPtr basePtr, uint[] gepIdx, IntPtr irb) {
            return loadFieldConstIdx(Instance, basePtr, gepIdx, (uint)gepIdx.Length, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void storeField (IntPtr ctx, IntPtr basePtr, IntPtr[] gepIdx, uint gepIdxCount, IntPtr nwVal, IntPtr irb);
        public static void StoreField (IntPtr ctx, IntPtr basePtr, IntPtr[] gepIdx, IntPtr nwVal, IntPtr irb) {
            storeField(ctx, basePtr, gepIdx, (uint)gepIdx.Length, nwVal, irb);
        }
        public void StoreField (IntPtr basePtr, IntPtr[] gepIdx, IntPtr nwVal, IntPtr irb) {
            storeField(Instance, basePtr, gepIdx, (uint)gepIdx.Length, nwVal, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void storeFieldConstIdx (IntPtr ctx, IntPtr basePtr, uint[] gepIdx, uint gepIdxCount, IntPtr nwVal, IntPtr irb);
        public static void StoreFieldConstIdx (IntPtr ctx, IntPtr basePtr, uint[] gepIdx, IntPtr nwVal, IntPtr irb) {
            storeFieldConstIdx(ctx, basePtr, gepIdx, (uint)gepIdx.Length, nwVal, irb);
        }
        public void StoreFieldConstIdx (IntPtr basePtr, uint[] gepIdx, IntPtr nwVal, IntPtr irb) {
            storeFieldConstIdx(Instance, basePtr, gepIdx, (uint)gepIdx.Length, nwVal, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr GetElementPtr (IntPtr ctx, IntPtr basePtr, IntPtr[] gepIdx, uint gepIdxCount, IntPtr irb);
        public IntPtr GetElementPtr (IntPtr basePtr, IntPtr[] gepIdx, IntPtr irb) {
            return GetElementPtr(Instance, basePtr, gepIdx, (uint)gepIdx.Length, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr GetElementPtrConstIdx (IntPtr ctx, IntPtr basePtr, uint[] gepIdx, uint gepIdxCount, IntPtr irb);
        public IntPtr GetElementPtrConstIdx (IntPtr basePtr, uint[] gepIdx, IntPtr irb) {
            return GetElementPtrConstIdx(Instance, basePtr, gepIdx, (uint)gepIdx.Length, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr GetElementPtrConstIdxWithType (IntPtr ctx, IntPtr pointeeTy, IntPtr basePtr, uint[] gepIdx, uint gepIdxCount, IntPtr irb);
        public IntPtr GetElementPtrConstIdxWithType (IntPtr pointeeTy, IntPtr basePtr, uint[] gepIdx, IntPtr irb) {
            return GetElementPtrConstIdxWithType(Instance, pointeeTy, basePtr, gepIdx, (uint)gepIdx.Length, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr load (IntPtr ctx, IntPtr basePtr, IntPtr irb);
        public static IntPtr Load (IntPtr ctx, IntPtr basePtr, IntPtr irb) {
            return load(ctx, basePtr, irb);
        }
        public IntPtr Load (IntPtr basePtr, IntPtr irb) {
            return load(Instance, basePtr, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern IntPtr loadAcquire (IntPtr ctx, IntPtr basePtr, IntPtr irb);
        public static IntPtr LoadAcquire (IntPtr ctx, IntPtr basePtr, IntPtr irb) {
            return loadAcquire(ctx, basePtr, irb);
        }
        public IntPtr LoadAcquire (IntPtr basePtr, IntPtr irb) {
            return loadAcquire(Instance, basePtr, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void store (IntPtr ctx, IntPtr basePtr, IntPtr nwVal, IntPtr irb);
        public static void Store (IntPtr ctx, IntPtr basePtr, IntPtr nwVal, IntPtr irb) {
            store(ctx, basePtr, nwVal, irb);
        }
        public void Store (IntPtr basePtr, IntPtr nwVal, IntPtr irb) {
            store(Instance, basePtr, nwVal, irb);
        }
        [DllImport(@"LLVMInterface.dll")]
        private static extern void storeRelease (IntPtr ctx, IntPtr basePtr, IntPtr nwVal, IntPtr irb);
